more client config options fixed

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,40 +17,15 @@
 <div class="eventBody_about">
     <div class="eventBody">
             <p> <span class="alert"> <%=data[3][0].companyAddress%></span> of <%=data[3][0].companyAddress%></p>
-   <p>We Offer:</p>
-              <ul>
-                <li>ABOUT US RESOURCES FROM DATABASE HERE</li>
-      
-
-<p></p>
-</ul>
+   <p>A little about us:</p>
+             <%=data[3][0].aboutFiller%>
             </div>
        
         </div>
             </div>
             <br>
        
-          
-
-        
-        <div class="midBar">
-       
-                <div class="landingPage0">
-            <a href="/market">     <div class="navBox">
-                services
-            </div></a>
-        </div>
-<div class="landingPage0">
-   <a href="/faqs"> <div class="navBox">
-        F.A.Q's
-    </div></a>
-</div>
-<div class="landingPage0">
-    <a href="/">   <div class="navBox">
-       home
-    </div></a>
-</div>
-</div>
+    <%- include('./config/navBar.ejs')%>
 <div class="eventBody">
 
 
