--- a/views/config/navBar.ejs
+++ b/views/config/navBar.ejs
@@ -1,5 +1,4 @@
-<a onclick="goBack()"><div class="navBox">go back</div></a>
+
+<a href="/market"><div class="navBox"><%=data[3][0].inventoryTitle%></div></a>
 <a href="/register"><div class="navBox">contact</div></a>
-<a href="/about"><div class="navBox">about us</div></a>
-<a href="/latest"><div class="navBox">latest</div></a>
-<a href="/market"><div class="navBox">market</div></a>
+<a href="/about"><div class="navBox">about</div></a>
