--- a/views/about.ejs
+++ b/views/about.ejs
@@ -16,7 +16,7 @@
                   
 <div class="eventBody_about">
     <div class="eventBody">
-            <p> <span class="alert"> <%=data[3][0].companyAddress%></span> of <%=data[3][0].companyAddress%></p>
+            <p> <span class="alert"> <%=data[3][0].companyName%></span> <br> <%=data[3][0].companyAddress%></p>
    <p>A little about us:</p>
              <%=data[3][0].aboutFiller%>
             </div>
@@ -42,11 +42,11 @@
 <div class="mainStyle">
     <div class="eventBody">
         <h2>about this website</h2>
-        <p>This ia a progressive web application</p>
-        <p>Runs in all major browsers with no app store download required</p>
+        <p>This ia a progressive web application
+        ,which runs in all major browsers, with no app store download required
         <p>Browse anonimously or add to cart by <a href="/register/login">registering</a> your email with us</p>
-        <p><a href="/register">Contact <%=data[3][0].companyName%></a>  about Estimates, Product Info, or a custom Design Idea</p>
-        <p>Our website offers our guests to browse, save, and purchase custom parts and plasma cuts </p>
+        <p><a href="/register">Contact <%=data[3][0].companyName%></a>  with any questions about us</p>
+        <p>Our website offers our online visitors to browse, save, and purchase <%=data[3][0].inventoryTitle%>(s) </p>
         <h2><%=data[3][0].companyName%> Web Application is Developed and Hosted by:</h2> <a href=""><h2> W2 Marketing LLC ~ Greeley, CO</h2></a>
         <a href="/tickets"><h2>report app issues to developer</h2></a>
     </div>
