--- a/views/service-agreements.ejs
+++ b/views/service-agreements.ejs
@@ -21,6 +21,7 @@
 <li>W2 Marketing stores user info in a database using best security practices</li>
 <li>Breaches are rare. In case of a nafarious data breach, W2 Marketing will make contact with all affected users, in good faith, to secure passwords and personal logins</li>
 <li>Users may request to delete info by sending a request from the registered email name to "Scott"email to: w2marketing.scott@gmail.com</li>
+<li>contact developers on the<a href="/w2">W2 Marketing App</a></li>
 </ul>
 <button onclick="goBack()">go back</button>
 </div>
