redraft, paid, transactions hfs

--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -93,6 +93,7 @@
 <td><form action="/invDelete" method="post"><input hidden name="invId"value="<%=data[2][i]._id%>"type="text"><button type="submit()">delete invoice</button></form></td>
 <td><form action="/invSend/<%=data[2][i]._id%>" method="post">
     <input hidden name="invId"value="<%=data[2][i]._id%>"type="text">
+    <br><p>process w/ email</p><input name="emailInvoice" type="checkbox"><br>
     <button type="submit()">process</button></form></td>
 
 
