--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -37,7 +37,7 @@
 
         <%if(typeof data[2]=='object' && data[2]){%>
            <%for(let i=0;i<data[2].length;i++){%>
-            <%if(data[2][i].status.paid==false){%>
+            <%if(data[2][i].status.paid==false&&data[2][i].status.draft==false){%>
 
            
 <!--.toLocaleDateString()-->
@@ -46,7 +46,11 @@
    <td style="border:1px dashed white"> <%=data[2][i].invTotal%></td>
    <td style="border:1px dashed white"> <%=data[2][i].partialPayments%></td>
   <td style="border:1px dashed white"><%=data[2][i].due.toLocaleString()%></td>
-  <td style="border:1px dashed white"><form action="/markPaid"method="post"><input hidden type="text"name="_id" value="<%=data[2][i]._id%>"><button>paid</button></form></td>
+  <td style="border:1px dashed white">
+    <form action="/reDraft"method="post"><input hidden name="inv_id" type="text"value="<%=data[2][i]._id%>"><input hidden type="text"name="_id_client" value="<%=data[2][i].invData.companyId%>"><button>draft</button></form>
+    <form action="/markPaid"method="post"><input hidden type="text"name="_id" value="<%=data[2][i]._id%>"><button>paid</button></form>
+
+</td>
 </tr>
 
 <!---->
