--- a/views/accounts.ejs
+++ b/views/accounts.ejs
@@ -23,15 +23,18 @@
       <a href="/invoice"><button>invoice</button></a>
     <div  id="pageCard" class="landingPage">
       <%for(let i =0;i<data[4].length;i++){%>
-        <a href="/editor/?_id=<%=data[4][i]._id%>&ext=_clients">
         <div class="eventBody">
-          <span class="alert"><h2> <%= data[4][i].companyName%></h2></span><br>
-          <%= data[4][i].contactName%><br>
-          <%= data[4][i].email%><br>
-          <%= data[4][i].phoneNumber%><br>
-          <%= data[4][i].businessAddress%>
-        </div>
-      </a>
+        <a href="/editor/?_id=<%=data[4][i]._id%>&ext=_clients">
+            <span class="alert"><h2> <%= data[4][i].companyName%></h2></span><br>
+            <%= data[4][i].contactName%><br>
+            <%= data[4][i].email%><br>
+            <%= data[4][i].phoneNumber%><br>
+            <%= data[4][i].businessAddress%><br>
+
+         balance: $ <%=data[4][i].status.balance%>.00<br>
+         <a href="/clientDashboard/<%=data[4][i]._id%>">view dash</a>
+        </a>
+      </div>
         <%}%>
       </div>
         
