--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -26,7 +26,7 @@
 <div class="eventBody">
 <h1> transactions</h1>
 
-
+<%if(typeof data[4]=='object'&&data[4]){%>
 
 <table style="border:1px dashed white">
     <thead style="text-align: center;">           
@@ -146,7 +146,7 @@ dd
 
 
 
-
+<%}%>
 
 
 <script>
